conformance/tests/listenerset-update-listener-hostname.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-listenerset-update-listener-hostname
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  allowedListeners:
    namespaces:
      from: Same
  listeners:
  - name: gateway-listener
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  name: listenerset-update-listener-hostname
  namespace: gateway-conformance-infra
spec:
  parentRef:
    kind: Gateway
    group: gateway.networking.k8s.io
    name: gateway-listenerset-update-listener-hostname
    namespace: gateway-conformance-infra
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    hostname: "other.example.com"
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-listenerset-update-listener-hostname
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - kind: ListenerSet
    group: gateway.networking.k8s.io
    name: listenerset-update-listener-hostname
    namespace: gateway-conformance-infra
  hostnames:
  - "accepted.example.com"
  rules:
  - backendRefs:
    - name: infra-backend-v1
      port: 8080
